<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/dish_800_400"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="2.6"
        android:background="@color/color_common_text_header"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_welcome_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_common_background"
            android:textSize="@dimen/dimens_welcome_header_textsize" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2.5"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_welcome_header_sub"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_common_text_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.8"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_initial_explanation_1st_line"
            android:textColor="@color/color_common_text_light" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimens_registration_explanation_margin"
            android:layout_marginRight="@dimen/dimens_registration_explanation_margin"
            android:text="@string/string_initial_explanation"
            android:textColor="@color/color_common_text_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2.0"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_label_start_service"
            android:textColor="@color/color_common_text_light" />

        <TextView
            android:id="@+id/textViewReadyToUse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_label_register_completed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/color_common_text_light"
            android:textSize="@dimen/dimens_registration_completed_notice_textsize"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_label_beta_notice"
            android:textColor="@color/color_common_text_light"
            android:textSize="5pt" />

    </LinearLayout>

</LinearLayout>